fix: repo, removed acquire as not main focus

--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -8,7 +8,7 @@ slug: "/repositories"
 
 ## Introduction
 
-Repositories are locations where digital objects are stored and made available to the public or data users. They can be regarded as the core of data sharing as they provide platforms to acquire, store, archive, publish, curate, preserve, and access data.
+Repositories are locations where digital objects are stored and made available to the public or data users. They can be regarded as the core of research data sharing as they provide platforms to store, curate, publish, archive, preserve, and access data.
 
 Repositories can be classified differently according to:
 
