feat: repo, proofreading of introduction

--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -8,16 +8,16 @@ slug: "/repositories"
 
 ## Introduction
 
-Repositories are locations where digital objects are stored and made available to the public or data users. They can be regarded as the core of research data sharing as they provide platforms to store, curate, publish, archive, preserve, and access data.
+Repositories are locations where digital objects are stored and made available to the public. They can be regarded as the core of research data sharing as they provide platforms to store, curate, publish, archive, preserve, and access data. Pre-print servers can also be considered as repositories, although these are tailored toward scientific articles rather than research data.
 
 Repositories can be classified differently according to:
 
-- the type of objects to be stored (e.g. publications or research data),
-- the domain of the data contained (institutional, subject-specific or generic),
-- the storage period of the data (e.g. at least 10 years) or
-- the data access and -reuse policy
+- the type of objects to be stored (e.g. scientific articles or research data),
+- the domain of the data contained (field-specific or generic repositories),
+<!--- the storage period of the data (e.g. at least 10 years) or
+the data access and -reuse policy -->
 
-Repositories can be an institutional publication server, a subject-specific Open Access (OA) repository, a subject-specific data repository or a long-term archive for data and publications.
+Repositories can be hosted at institutional server or are provided by broader organisations or consortia such as NFDI4Chem.
 
 ## How do repositories work?
 
