--- a/i18n/de/docusaurus-plugin-content-docs/current/10_domains/30_polymer_chemistry.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/10_domains/30_polymer_chemistry.mdx
@@ -8,39 +8,37 @@ import Methods from '@site/src/components/Methods.js';
 
 :::info Summary:
 
-Polymer chemistry is focused on the synthesis and characterization of monomer units, macromolecules and resultant
-materials for applications in e.g. optics, electronics and energy, packaging and containers, coatings and adhesives,
-catalysis or medicine. Polymeric materials can be subdivided by their origin into synthetic, inorganic and
-biopolymers, where the latter is a significant subject of recent research as they can be derived from renewable
-resources and therefore are deemed to be part of the solution for a sustainable future. The toolbox for monomer synthesis and modification, their polymerization as well as post-functionalization are often translated form organic chemistry, yet for cutting-edge materials new experimental strategies have to be developed. Many characterization methods, especially for monomers or small polymers, can also be adapted from established organic chemistry. However, since macromolecules can feature highly complex structures, e.g. brushes, dendrimers, rings and star shapes, advanced methods such as (2D) SEC, LCCC, DOSY NMR, or electron microscopy need to be applied in order to obtain an exhaustive structure determination (for abbreviations see table below). For their subsequent application as high-tech material, their mechanical and physical properties play an important role as well, where cyclic voltammetry or rheological characterization are just a few examples for the vast array of techniques that are available. A standard approach for the development of new polymeric materials can be described as follows:
+Die Polymerchemie befasst sich mit der Synthese und Charakterisierung von Monomereinheiten, Makromolekülen und den daraus resultierenden
+Materialien für Anwendungen z.B. in der Optik, Elektronik und Energie, Verpackung und Behälter, Beschichtungen und Klebstoffe,
+Katalyse oder Medizin. Polymere Werkstoffe können nach ihrer Herkunft in synthetische, anorganische und Biopolymere unterteilt werden, wobei letztere ein wichtiger Forschungsgegenstand sind, da sie aus erneuerbaren Ressourcen gewonnen werden können und daher als Teil der Lösung für eine nachhaltige Zukunft angesehen werden. Der Werkzeugkasten für die Synthese und Modifizierung von Monomeren, ihre Polymerisation sowie die Nachfunktionalisierung wird häufig aus der organischen Chemie übernommen, jedoch müssen für hochmoderne Materialien neue experimentelle Strategien entwickelt werden. Viele Charakterisierungsmethoden, insbesondere für Monomere oder kleine Polymere, können auch aus der etablierten organischen Chemie übernommen werden. Da Makromoleküle jedoch hochkomplexe Strukturen aufweisen können, z.B. Bürsten, Dendrimere, Ringe und Sternformen, müssen fortgeschrittene Methoden wie (2D) SEC, LCCC, DOSY NMR oder Elektronenmikroskopie eingesetzt werden, um eine umfassende Strukturbestimmung zu erhalten (Abkürzungen siehe Tabelle unten). Für die spätere Anwendung als High-Tech-Material spielen auch die mechanischen und physikalischen Eigenschaften eine wichtige Rolle, wobei die zyklische Voltammetrie oder die rheologische Charakterisierung nur einige Beispiele für die große Bandbreite der verfügbaren Techniken sind. Ein Standardansatz für die Entwicklung neuer polymerer Materialien kann wie folgt beschrieben werden:
 
-- Preparation of organic/inorganic monomer units.
-- Small-scale experiments for screening/optimization of reaction conditions.
-- Upscaling of reactions to obtain sufficient product for subsequent polymerization steps.
-- (Co)polymerization of monomers in different ratios/chain lengths as well as optimization of reaction conditions.
-- Post-polymerization functionalization.
-- Synthesis of macroscopic materials through 3D printing, moulding etc.
+- Herstellung von organischen/anorganischen Monomereinheiten.
+- Experimente im kleinen Maßstab zum Screening/Optimierung der Reaktionsbedingungen.
+- Upscaling der Reaktionen, um genügend Produkt für die nachfolgenden Polymerisationsschritte zu erhalten.
+- (Co-)Polymerisation von Monomeren in verschiedenen Verhältnissen/Kettenlängen sowie Optimierung der Reaktionsbedingungen.
+- Funktionalisierung nach der Polymerisation.
+- Synthese makroskopischer Materialien durch 3D-Druck, Formgebung usw.
 
-In order to collect comprehensive analytical data to characterize the synthesized materials the following steps can be taken:
+Um umfassende analytische Daten zur Charakterisierung der synthetisierten Materialien zu sammeln, können die folgenden Schritte unternommen werden:
 
-- Data can be collected during the experiment through online methods, drawing samples on a specific schedule, or after the experiment by analyzing the obtained product.
-- Manually determined data: Experimental observations such as colour change or precipitants, appearance, yield and consistency of the product, solubility etc.
-- Digital data are obtained with analytical devices. An overview on file extensions, file sizes and converters for several analytical methods is given in the table below.
-- When necessary, pre-processing of digital data with software of analytical device before data are transferred to the Chemotion-ELN.
-- Raw data files in proprietary file formats should be saved alongside interoperable open file formats by using converters or the software of the analytical device. If no specific open format is currently available, exporting as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
+- Die Daten können während des Versuchs mittels Online-Methoden gesammelt werden, indem Proben nach einem bestimmten Zeitplan gezogen werden, oder nach dem Versuch durch die Analyse des erhaltenen Produkts.
+- Manuell ermittelte Daten: Experimentelle Beobachtungen wie Farbänderung oder Ausfällungen, Aussehen, Ausbeute und Konsistenz des Produkts, Löslichkeit usw.
+- Digitale Daten werden mit analytischen Geräten gewonnen. Die nachstehende Tabelle gibt einen Überblick über Dateierweiterungen, Dateigrößen und Konverter für verschiedene Analysemethoden.
+- Falls erforderlich, Vorverarbeitung digitaler Daten mit der Software des Analysegeräts, bevor die Daten an Chemotion-ELN übertragen werden.
+- Rohdatendateien in geschützten Dateiformaten sollten neben interoperablen offenen Dateiformaten mit Hilfe von Konvertern oder der Software des Analysegeräts gespeichert werden. Wenn derzeit kein spezifisches offenes Format verfügbar ist, wird der Export als .txt oder .csv empfohlen. Bitte beachten Sie, dass die Metadaten in der Kopfzeile von .txt- oder .csv-Dateien möglicherweise nicht einem definierten (offenen) Format entsprechen und die Metadaten zusätzlich auch in das ELN aufgenommen werden sollten.
 :::
 
 
-## Documentation and publication of research data
+## Dokumentation und Veröffentlichung von Forschungsdaten
 
-The Chemotion-ELN was initially developed for organic chemistry and is now adapted for other disciplines in chemistry as well. The adaption for polymer chemistry and the integration of analytical methods are now ongoing, therefore the individual methods in the table below are marked respectively. Generally, the documentation of research data is conducted as follows:
+Das Chemotion-ELN wurde ursprünglich für die organische Chemie entwickelt und wird nun auch für andere Disziplinen der Chemie angepasst. Die Anpassung für die Polymerchemie und die Integration von analytischen Methoden ist im Gange, daher sind die einzelnen Methoden in der Tabelle unten entsprechend gekennzeichnet. Die Dokumentation von Forschungsdaten erfolgt in der Regel wie folgt:
 
-- Documentation of research data  is carried out digitally using an ELN.
-- Experimental conditions (e.g. solvents, temperature, duration, pressure) are noted in the ELN.
-- Observations and results of analytical methods with no digital output (i.e. no data files) are added manually to the ELN entry of the experiment, including colour change or precipitants, appearance, yield and consistency of the product, solubility etc.
-- Obtained data from analytical instruments (e.g. NMR, SEC, MS or IR data) are uploaded to the Chemotion-ELN in open file formats and directly attached to the respective ELN experiment entry including instrumental setup metadata.
+- Die Dokumentation der Forschungsdaten erfolgt digital über ein ELN.
+- Versuchsbedingungen (z.B. Lösungsmittel, Temperatur, Dauer, Druck) werden im ELN notiert.
+- Beobachtungen und Ergebnisse von Analysemethoden ohne digitale Ausgabe (d. h. keine Datendateien) werden manuell zum ELN-Eintrag des Versuchs hinzugefügt, einschließlich Farbänderung oder Ausfällungen, Aussehen, Ausbeute und Konsistenz des Produkts, Löslichkeit usw.
+- Die von analytischen Instrumenten erhaltenen Daten (z. B. NMR-, SEC-, MS- oder IR-Daten) werden in offenen Dateiformaten in das Chemotion-ELN hochgeladen und direkt an den jeweiligen ELN-Experimenteintrag angehängt, einschließlich der Metadaten zum Instrumentenaufbau.
 
-In an effort to realize research data management in line with the FAIR principles, the data can be published in a repository including raw and processed data for reuse, directly from the Chemotion-ELN. The use of the Chemotion-ELN enables a direct transfer of research data and the respective metadata into the Chemotion Repository. Subsequently, these data are automatically shared with other repositories, e.g. PubChem. For the publication of research data in other discipline-specific repositories, data have to be exported from the Chemotion-ELN and uploaded into the respective database.
+In dem Bestreben, ein Forschungsdatenmanagement im Einklang mit den FAIR-Prinzipien zu realisieren, können die Daten direkt aus dem Chemotion-ELN heraus in einem Repositorium veröffentlicht werden, das Roh- und verarbeitete Daten zur Wiederverwendung enthält. Die Nutzung des Chemotion-ELN ermöglicht einen direkten Transfer von Forschungsdaten und den zugehörigen Metadaten in das Chemotion Repository. Anschließend werden diese Daten automatisch mit anderen Repositorien, z.B. PubChem, geteilt. Für die Veröffentlichung von Forschungsdaten in anderen disziplinspezifischen Repositorien müssen die Daten aus dem Chemotion-ELN exportiert und in die jeweilige Datenbank hochgeladen werden.
 
 <Methods defaultProfile={"polymer"} />
 
